--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <!--
-Design by Free CSS Templates
+Basado en un diseño de Free CSS Templates
+==============================
 http://www.freecsstemplates.org
 Released for free under a Creative Commons Attribution 2.5 License
 
@@ -8,20 +9,24 @@ Name       : EarthlingTwo
 Description: A two-column, fixed-width design with dark color scheme.
 Version    : 1.0
 Released   : 20090918
+==============================
+
+Modificado por:
+SIR - Soluciones Integrales Roraima Caracas - Venezuela Copyright©2011
 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<title>EarthlingTwo by Free CSS Templates</title>
+<title>SUGU - Sistema Universal de Gestión Universitaria by SIR</title>
 <link href="../resources/css/style.css" rel="stylesheet" type="text/css" media="screen" />
 </head>
 <body>
 <div id="wrapper">
 	<div id="header">
 		<div id="logo">
-			<a href="/home/"></a>
+			<a href="/home/"<img src="" alt="" /></a>
 		</div>
 	</div>
 	<!-- end #header -->
@@ -40,14 +45,14 @@ Released   : 20090918
 	<!-- end #menu -->
 	<div id="page">
 		<div id="content">
-			<div id="banner"><img src="../resources/images/img07.jpg" alt="" /></div>
+          <!--
+			<div id="banner"><img src="../resources/images/img07.jpg" alt=""/></div>
+            -->
 			<div class="post">
-				<h2 class="title"><a href="#">Lorem ipsum dolor sit amet </a></h2>
-				<p class="meta">Aliquam sit amet tempus sed consequat</p>
+				<h2 class="title"><a href="#">Nombre de la Clase Consultada</a></h2>
+				<p class="meta">Frase corta descriptiva de la clase</p>
 				<div class="entry">
-					<p>This is <strong>EarthlingTwo</strong>, a free template by <a href="http://www.nodethirtythree.com">nodethirtythree</a> and <a href="http://www.freecsstemplates.org">Free CSS Templates</a>.  It’s kind of a sequel to an older template I did for FCT a long time ago named <a href="http://www.freecsstemplates.org/preview/earthling">Earthling</a>.</p>
-					<p>This template is released under the <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution</a> license, so use it however you like, just keep the links back to our sites. The scenic photo above is a public domain work from <a href="http://www.pdphoto.org">PDPhoto.org</a>. Be sure to check out my other work at <a href="http://www.nodethirtythree.com/">my site</a> or follow me on <a href="http://twitter.com/nodethirtythree/">Twitter</a> for news and updates. Have fun.</p>
-					<p class="links"><a href="#" class="more">Read More</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" class="comments">Comments (33)</a></p>
+					<p>AQUI SE DEBEN PONER LAS SALIDAS DE LA INTERFAZ</p>
 				</div>
 			</div>
 			<div style="clear: both;">&nbsp;</div>
@@ -59,17 +64,13 @@ Released   : 20090918
 					<h2>Otras operaciones</h2>
 					<p><strong>Gracias por utilizar SUGU!!!</strong> Busca, edita o elimina registros del sistema con sólo unos cuantos clics...</p>
 				</li>
+                <div style="clear: both;">&nbsp;</div>
 				<li>
-					<h2>Categories</h2>
+					<h2>Acerca del sistema...</h2>
+                    <p><strong>Este sistema llegó a ti gracias a</strong></p>
 					<ul>
-						<li><span>09.13.09</span><a href="#">Vestibulum risus vitae</a></li>
-						<li><span>09.13.09</span><a href="#">Condimentum et molestie</a></li>
-						<li><span>09.13.09</span><a href="#">Facilisis sed vestibulum</a></li>
-						<li><span>09.13.09</span><a href="#">Ipsum primis et sed luctus </a></li>
-						<li><span>09.13.09</span><a href="#">Ultrices posuere nulla </a></li>
-						<li><span>09.13.09</span><a href="#">Accumsan lorem sodales </a></li>
-						<li><span>09.13.09</span><a href="#">Scelerisque consectetur </a></li>
-						<li><span>09.13.09</span><a href="#">Maecenas quam aliquet</a></li>
+						<li><img id="logoAbout" src="../resources/images/logo-SIR.png" alt="" /></li>
+                        <li><img id="nameAbout" src="../resources/images/SIR-nombre.png" alt="" /></li>
 					</ul>
 				</li>
 			</ul>
@@ -79,23 +80,8 @@ Released   : 20090918
 	</div>
 	<!-- end #page -->
 </div>
-<div id="footer-content">
-	<div class="column1">
-		<h2>Volutpat quisque sed et aliquam</h2>
-		<p><strong>Maecenas ut ante</strong> eu velit laoreet tempor accumsan vitae nibh. Aenean commodo, tortor eu porta convolutpat elementum. Proin fermentum molestie erat eget vehicula. Aenean eget tellus mi. Fusce scelerisque odio quis ante bibendum sollicitudin. Suspendisse potenti. Vivamus quam odio, facilisis at ultrices nec, sollicitudin ac risus. Donec ut odio ipsum, sed tincidunt. <a href="#">Learn more&#8230;</a></p>
-	</div>
-	<div class="column2">
-		<ul class="list">
-			<li><a href="#">Tempor accumsan vitae sed nibh dolore</a></li>
-			<li><a href="#">Aenean commodo, tortor eu porta veroeros</a></li>
-			<li><a href="#">Fermentum molestie erat eget consequat</a></li>
-			<li><a href="#">Donec vestibulum interdum diam etiam</a></li>
-			<li><a href="#">Vehicula aenean eget sed tellus blandit</a></li>
-		</ul>
-	</div>
-</div>
 <div id="footer">
-	<p> (c) 2009 Sitename.com. Design by <a href="http://www.nodethirtythree.com">nodethirtythree</a> and <a href="http://www.freecsstemplates.org">Free CSS Templates</a>.</p>
+  <p> © 2011 www.sugu.com. Basado en el diseño de <a href="http://www.nodethirtythree.com">nodethirtythree</a> y <a href="http://www.freecsstemplates.org">Free CSS Templates</a>. Modificado por SIR <img id="logoFooter" src="../resources/images/logo-SIR.png" alt="" /> Soluciones Integrales Roraima.</p>
 </div>
 <!-- end #footer -->
 </body>
