Interfaz de Carrera implementada a 3 capas, version 1
Por hacer:
-Revisar mi clase Carrera (escapar entrada)
-Documentar lo que hice

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -146,8 +146,8 @@ h2 a {
 /* Content */
 
 #content {
-	float: right;
-	width: 570px;
+/*	float: right;*/
+/*	width: 570px;*/
 	padding: 0px 0px 0px 0px;
 }
 
