--- a/src/templates/bienvenida.html
+++ b/src/templates/bienvenida.html
@@ -11,7 +11,7 @@
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <title>PINF</title>
-    <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" media="screen" />
 </head>
 
 <body>
