--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -75,69 +75,9 @@
 				<!-- inicio barra lateral -->
 				<div id="barlateral">
 					<h3>Registrarse es facil, y gratis!!!</h3>
-                    <form name="registro" action="home.php" method="post">
-                      <legend><h3>Adelante..</h3></legend>
-                      <table>
-                        <tbody>
-                         <tr>
-                            <label>Username::</label>
-                          </tr><br/><br/>
-                          <tr>
-                            <input name="usr" type="text" class="field"/>
-                          </tr><br/><br/>
-			  <tr>
-                            <label>Nombre:</label>
-                          </tr><br/><br/>
-                          <tr>
-                            <input name="nom" type="text" class="field"/>
-                          </tr><br/><br/>
-                          <tr>
-                            <label>Apellido:</label>
-                          </tr><br/><br/>
-                          <tr>
-                            <input name="ap" type="text" class="field"/>
-                          </tr><br/><br/>
-                          <tr>
-                            <label> E-Mail: </label>
-                          </tr><br/><br/>
-                          <tr>
-                            <input name="em1" type="text" class="field"/>
-                          </tr><br/><br/>
-                          <tr>
-                            <label> Reescriba su email:</label>
-                          </tr><br/><br/>
-                          <tr>
-                            <input name="em2" type="text" class="field"/>
-                          </tr><br/><br/>
-                          <tr>
-                            <label>Contraseña:</label>
-                          </tr><br/><br/>
-                          <tr>
-                            <input name="co1" type="text" class="field"/>
-                          </tr><br/><br/>
-                          <tr>
-                            <label>Reescriba su Contraseña:</label>
-                          </tr><br/><br/>
-                          <tr>
-                            <input name="co2" type="text" class="field"/>
-                          </tr><br/><br/>
-                          <tr>
-                            <label>Sexo:</label>
-                          </tr><br/><br/>
-                          <tr class="sex">
-                            <div><input class="sex" name="genero" value="masculino" type="radio"/> Masculino</div>
-                            <div><input class="sex" name="genero" value="femenino" type="radio"/> Femenino</div>
-                          </tr><br/><br/>
-                          <tr>
-                            <label>Fecha de Nacimiento:</label>
-                          </tr><br/><br/>
-                          <tr>
-                            <input name="fe" type="text" class="field"/>
-                          </tr><br/><br/>
-                          <input type="submit" value="Enviar!">
-                        </tbody>
-                      </table>
-                    </form>
+                    <legend><h3>Adelante...</h3></legend>
+                    <?php require_once("../controladores/PerfilController.php");
+                    ?>
 				</div>
 				<!-- fin barra lateral -->
 				
