Casi listo editar perfil. Falta enviar los datos.

--- a/perfil/htdocs/css/style.css
+++ b/perfil/htdocs/css/style.css
@@ -448,3 +448,18 @@ top: 15px;
 #regForm label {
     text-align: right;
 }
+
+textarea {
+    width: 600px;
+    height:100px;
+}
+
+input {
+    width: 250px;
+    height:17px;
+}
+
+#submitBtn, #resetBtn {
+    width: auto;
+    height:auto;
+}
